# Fata-Cognita

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: default.yaml
scripts/: download_nlsy.py  extract_archetypes.py  preprocess.py  serve.py  train.py
src/fata_cognita/: __init__.py  config.py  device.py
src/fata_cognita/api/: __init__.py  deps.py  main.py
src/fata_cognita/api/routes/: archetypes.py  (+3 more)
src/fata_cognita/archetypes/: __init__.py  extractor.py  profiler.py  visualizer.py
src/fata_cognita/dashboard/: __init__.py  app.py
src/fata_cognita/data/: __init__.py  dataset.py  feature_engineer.py  nlsy_loader.py  scaler.py  sequence_builder.py  synthetic.py
src/fata_cognita/inference/: __init__.py  predictor.py  sensitivity.py  simulator.py  transforms.py
src/fata_cognita/model/: __init__.py  beta_schedule.py  decoder.py  encoder.py  loss.py  vae.py
src/fata_cognita/training/: __init__.py  callbacks.py  metrics.py  trainer.py
tests/: conftest.py
tests/fixtures/: tiny_nlsy_sample.csv
tests/integration/: test_api.py  test_api_errors.py  test_train_loop.py
tests/unit/: test_beta_schedule.py  test_config.py  test_decoder.py  test_encoder.py  test_extractor.py  test_feature_engineer.py  test_input_validation.py  test_loss.py  test_metrics.py  test_nlsy_loader.py  test_predictor.py  test_sensitivity.py  test_sequence_builder.py  test_simulator.py  test_synthetic.py  test_transforms.py  test_vae.py
(+4 files in other folders)
